[package]
name = "vcv-rs"
version = "0.1.0"
edition = "2024"
description = "Fast Visual Studio environment setup"
license = "MIT"
authors = ["joss13@gmail.com"]
repository = "https://github.com/ssoj13/vcv-rs"
homepage = "https://github.com/ssoj13/vcv-rs"
documentation = "https://docs.rs/vcv-rs"

[dependencies]
winreg = "0.55"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
